--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,6 @@
 
 
 
-    <include layout="@layout/content_main" />
+    <include android:id="@+id/id_content" layout="@layout/content_main" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
